Wed Aug 16 13:59:07 2006  Tim Janik  <timj@gtk.org>

	* tests/gobject/Makefile.am:
	* tests/gobject/singleton.c: added test program which demonstrates
	and checks singleton construction.

2006-08-15  Matthias Clasen  <mclasen@redhat.com>

	* glib/gbookmarkfile.c (g_bookmark_file_get_groups):
	* glib/gmain.c (g_source_is_destroyed): Add Since tags.
	* glib/gkeyfile.c (g_key_file_get_double_list): Fix
	Since tag.  (#351583, Brian Cameron)

	* configure.in: Bump version

	* === Released 2.12.2 ===

	* NEWS: Updates

2006-08-08  Emmanuele Bassi  <ebassi@gnome.org>

	* glib/gbookmarkfile.c (g_bookmark_file_remove_group)
	(g_bookmark_file_set_app_info): Plug a couple of leaks
	when removing data from a bookmark.

2006-08-05  Matthias Clasen  <mclasen@redhat.com>

	* glib/gbookmarkfile.c (find_file_in_data_dirs): Correct the
	grammar of an error message.  (#349792, Jakub Friedl)

	* glib/gkeyfile.c (g_key_file_to_data): Don't insert unnecessary
	newlines in keyfiles.  (#349825, Chris Wilson)

	* glib/guniprop.c (g_unichar_toupper, g_unichar_tolower) 
	(real_toupper, real_tolower): If a character can't be converted,
	don't replace it with a NUL byte, but leave it unchanged.  
	(#348491, Nikolai Weibull)

	* tests/unicode-caseconv.c: Adapt to this change. 

	* tests/unicode-caseconv.c (main): Add a comment to point out
	a quirk in the test data that we are working around here.

2006-07-31  Behdad Esfahbod  <behdad@gnome.org>

	* glib/guniprop.c (g_unichar_isxdigit): Make it only accept those
	characters that we accept i g_unichar_xdigit_value(), i.e. don't
	accept non-decimal digits. (#347842, Nikolai Weibull)

2006-07-31  Behdad Esfahbod  <behdad@gnome.org>

	* glib/gunidecomp.c (_g_utf8_normalize_wc): Update to reflect Unicode
	PR #29 (#348694, Nikolai Weibull)

	* tests/unicode-normalize.c (encode), (test_form): Make output more
	useful, reporting the unexpected output of the test.

2006-07-24  Tor Lillqvist  <tml@novell.com>
